Fixed Header
moved :hover from phone css to small screen(992px) fixing, the bug where the dropdown wouldn't be invisible when clicking a second time

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -77,9 +77,6 @@ header{
                 font-size: $font-size-400;
             }
         }
-        // &:hover .dropdown-content {
-        //     display: flex;
-        // }
         &:active .dropdown-content{
             display: flex;
         }
@@ -157,6 +154,11 @@ header{
     header{
         img{
             height: 50px;
+        }
+        .dropdown{
+            &:hover .dropdown-content {
+                display: flex;
+            }
         }
         nav{
             margin-left: auto;
